Nuevos camos en la entidad MensajePrivado para manejar mejor la vosibilidad de los mensajes segun rol. Fix: pequeño arreglo de asociación de categorias